force-app/main/default/objects/Caregiver_Recognition__c/Caregiver_Recognition__c.object-meta.xml
<CustomObject>
    <label>Caregiver Recognition</label>
    <nameField>
        <displayFormat>CR{000000}</displayFormat>
        <label>CR#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Caregiver Recognition</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>