force-app/main/default/objects/Caregiver_Recognition__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact / Team Lead</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Caregiver Recognition</relationshipLabel>
    <relationshipName>Nominations</relationshipName>
    <type>Lookup</type>
</CustomField>