force-app/main/default/objects/Caregiver_Recognition__c/fields/Date_of_Nomination__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Nomination__c</fullName>
    <label>Date of Nomination</label>
    <type>Date</type>
</CustomField>