force-app/main/default/objects/Caregiver_Recognition__c/fields/Entry_ID__c.field-meta.xml
<CustomField>
    <fullName>Entry_ID__c</fullName>
    <description>Entry ID assigned by online nomination form.</description>
    <externalId>true</externalId>
    <inlineHelpText>Entry ID assigned by online nomination form.</inlineHelpText>
    <label>Entry ID</label>
    <length>5</length>
    <type>Text</type>
</CustomField>