force-app/main/default/objects/Caregiver_Recognition__c/fields/Honoree_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Honoree_First_Name__c</fullName>
    <label>Honoree First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>