force-app/main/default/objects/Caregiver_Recognition__c/fields/Honoree_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Honoree_Last_Name__c</fullName>
    <label>Honoree Last Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>