force-app/main/default/objects/Caregiver_Recognition__c/fields/Honoree_Name__c.field-meta.xml
<CustomField>
    <fullName>Honoree_Name__c</fullName>
    <formula>Honoree_First_Name__c &amp;&quot; &quot;&amp; Honoree_Last_Name__c &amp;&quot;, &quot;&amp; Honoree_Suffix__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Honoree Name</label>
    <type>Text</type>
</CustomField>