force-app/main/default/objects/Caregiver_Recognition__c/fields/Honoree_Suffix__c.field-meta.xml
<CustomField>
    <fullName>Honoree_Suffix__c</fullName>
    <label>Honoree Suffix</label>
    <length>100</length>
    <type>Text</type>
</CustomField>