force-app/main/default/objects/Caregiver_Recognition__c/fields/Honoree_Title__c.field-meta.xml
<CustomField>
    <fullName>Honoree_Title__c</fullName>
    <label>Honoree Title</label>
    <length>250</length>
    <type>Text</type>
</CustomField>