force-app/main/default/objects/Caregiver_Recognition__c/fields/Is_Existing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Is_Existing_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Existing Contact</label>
    <type>Checkbox</type>
</CustomField>