force-app/main/default/objects/Caregiver_Recognition__c/fields/New_Contact_Created__c.field-meta.xml
<CustomField>
    <fullName>New_Contact_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Contact Created</label>
    <type>Checkbox</type>
</CustomField>