force-app/main/default/objects/Caregiver_Recognition__c/fields/Nominator__c.field-meta.xml
<CustomField>
    <fullName>Nominator__c</fullName>
    <label>Nominated By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>