force-app/main/default/objects/Caregiver_Recognition__c/fields/Note__c.field-meta.xml
<CustomField>
    <fullName>Note__c</fullName>
    <label>Note</label>
    <length>750</length>
    <type>LongTextArea</type>
</CustomField>