force-app/main/default/objects/Caregiver_Recognition__c/fields/Raiser_s_Edge_ID__c.field-meta.xml
<CustomField>
    <fullName>Raiser_s_Edge_ID__c</fullName>
    <label>Raiser&apos;s Edge ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>