force-app/main/default/objects/Caregiver_Recognition__c/fields/Recognition_Stage__c.field-meta.xml
<CustomField>
    <fullName>Recognition_Stage__c</fullName>
    <label>Recognition Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nominee</fullName>
            </value>
            <value>
                <fullName>Finalist</fullName>
            </value>
            <value>
                <fullName>Awardee</fullName>
            </value>
            <value>
                <fullName>Honorable Mention</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>