force-app/main/default/objects/Caregiver_Recognition__c/fields/Spokesperson_IMPACT__c.field-meta.xml
<CustomField>
    <fullName>Spokesperson_IMPACT__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Presents the program at the IMPACT Honors dinner</inlineHelpText>
    <label>Spokesperson (IMPACT)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Caregiver Recognition (Spokesperson (IMPACT))</relationshipLabel>
    <relationshipName>Caregiver_Recognition</relationshipName>
    <type>Lookup</type>
</CustomField>