force-app/main/default/objects/Caregiver_Recognition__c/fields/Type_of_Nomination__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Nomination__c</fullName>
    <label>Type of Recognition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HYC</fullName>
            </value>
            <value>
                <fullName>NCCY</fullName>
            </value>
            <value>
                <fullName>IMPACT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>